// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WidgetCatalogCtrl defines expected scope vars 1`] = `
Array [
  "$watch",
  "$on",
  "search",
  "totalWidgets",
  "count",
  "noWidgetsInstalled",
  "isShowingFilters",
  "ready",
  "activeFilters",
  "showFilters",
  "clearFilters",
  "clearFiltersAndSearch",
  "featuredWidgets",
  "toggleFilter",
  "widgets",
  "filters",
  "isFiltered",
  "jestTest",
]
`;

exports[`WidgetCatalogCtrl implements url based filters and search on initial load 1`] = `
Array [
  "$watch",
  "$on",
  "search",
  "totalWidgets",
  "count",
  "noWidgetsInstalled",
  "isShowingFilters",
  "ready",
  "activeFilters",
  "showFilters",
  "clearFilters",
  "clearFiltersAndSearch",
  "featuredWidgets",
  "toggleFilter",
  "widgets",
  "filters",
  "isFiltered",
  "jestTest",
]
`;

exports[`WidgetCatalogCtrl implements url based filters and search on initial load 2`] = `
Object {
  "SuPpOrTeD FoUr!!": Object {
    "clean": "su_pp_or_te_d_fo_ur",
    "isActive": false,
    "text": "SuPpOrTeD FoUr!! Questions",
  },
  "feature1": Object {
    "clean": "feature1",
    "isActive": true,
    "text": "feature1",
  },
  "feature2": Object {
    "clean": "feature2",
    "isActive": false,
    "text": "feature2",
  },
  "feature3": Object {
    "clean": "feature3",
    "isActive": false,
    "text": "feature3",
  },
  "supported1": Object {
    "clean": "supported1",
    "isActive": false,
    "text": "supported1 Questions",
  },
  "supported2": Object {
    "clean": "supported2",
    "isActive": false,
    "text": "supported2 Questions",
  },
  "supported_three": Object {
    "clean": "supported_three",
    "isActive": true,
    "text": "supported_three Questions",
  },
}
`;

exports[`WidgetCatalogCtrl initializes with no filters and search on initial load 1`] = `
Array [
  "$watch",
  "$on",
  "search",
  "totalWidgets",
  "count",
  "noWidgetsInstalled",
  "isShowingFilters",
  "ready",
  "activeFilters",
  "showFilters",
  "clearFilters",
  "clearFiltersAndSearch",
  "featuredWidgets",
  "toggleFilter",
  "widgets",
  "filters",
  "isFiltered",
  "jestTest",
]
`;

exports[`WidgetCatalogCtrl initializes with no filters and search on initial load 2`] = `
Object {
  "SuPpOrTeD FoUr!!": Object {
    "clean": "su_pp_or_te_d_fo_ur",
    "isActive": false,
    "text": "SuPpOrTeD FoUr!! Questions",
  },
  "feature1": Object {
    "clean": "feature1",
    "isActive": false,
    "text": "feature1",
  },
  "feature2": Object {
    "clean": "feature2",
    "isActive": false,
    "text": "feature2",
  },
  "feature3": Object {
    "clean": "feature3",
    "isActive": false,
    "text": "feature3",
  },
  "supported1": Object {
    "clean": "supported1",
    "isActive": false,
    "text": "supported1 Questions",
  },
  "supported2": Object {
    "clean": "supported2",
    "isActive": false,
    "text": "supported2 Questions",
  },
  "supported_three": Object {
    "clean": "supported_three",
    "isActive": false,
    "text": "supported_three Questions",
  },
}
`;

exports[`WidgetCatalogCtrl properly generates clean filter names 1`] = `
Array [
  "feature1",
  "feature3",
  "supported1",
  "supported_three",
  "su_pp_or_te_d_fo_ur",
  "feature2",
  "supported2",
]
`;

exports[`WidgetCatalogCtrl toggling on a filter updates scope 1`] = `
Array [
  Object {
    "dir": "mockDir1",
    "icon": "widget.jpg",
    "id": 1,
    "in_catalog": "1",
    "meta_data": Object {
      "about": "information about the widget",
      "demo": "1",
      "excerpt": "more information about the widget",
      "features": Array [
        "feature1",
        "feature3",
      ],
      "supported_data": Array [
        "supported1",
        "supported_three",
        "SuPpOrTeD FoUr!!",
      ],
    },
    "name": "widget1",
  },
]
`;
